# enkel

./: Cargo.toml  README.md  build.rs
samples/simple/: Cargo.toml
samples/simple/src/: main.rs
src/: content_loader.rs  font.rs  font_loader.rs  game.rs  game_time.rs  graphics.rs  graphics_context.rs  input.rs  lib.rs  model.rs  render_pipeline.rs  renderer.rs  shader.rs  shader.wgsl  text.rs  texture.rs  types.rs
src/input/: input_system.rs  keyboard.rs
src/model/: assimp_loader.rs
