[package]
name = "enkel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.9.0"
winit = "0.25.0"
pollster = "0.2"
bytemuck =  {version = "1.7.2", features = ["derive"]}
image = "0.23.14"
anyhow = "1.0.42"
cgmath = "0.18.0"
russimp = "1.0.1"

[build-dependencies]
anyhow = "1.0.45"
fs_extra = "1.2.0"
glob = "0.3.0"